# polyline-ffi

./: .gitattributes  .travis.yml  Cargo.toml  Cross.toml  README.md  appveyor.yml  index.html  search-index.js
.cargo/: config  config.toml
.github/workflows/: test.yml
ci/: before_deploy.ps1  before_deploy.sh  before_deploy_windows.ps1  manylinux_rust.sh  script.sh
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js
implementors/core/iter/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js
include/: header.h
polyline/: decode_polyline.v.html  encode_coordinates.v.html  fn.decode_polyline.html  fn.encode_coordinates.html  index.html  sidebar-items.js
polyline_ffi/: decode_polyline_ffi.v.html  drop_cstring.v.html  encode_coordinates_ffi.v.html  fn.decode_polyline_ffi.html  fn.drop_cstring.html  fn.drop_float_array.html  fn.encode_coordinates_ffi.html  index.html  sidebar-items.js  struct.Array.html
src/: lib.rs
src/polyline/: lib.rs.html
src/polyline_ffi/: lib.rs.html
test_fixtures/: berlin.rs  berlin_decoded.rs
