[package]
name = "polyline-ffi"
version = "0.4.2"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
description = "FFI bindings for the polyline crate"
documentation = "https://urschrei.github.io/polyline-ffi/polyline_ffi/index.html"
homepage = "https://urschrei.github.io/polyline-ffi/polyline_ffi/index.html"
repository = "https://github.com/urschrei/polyline-ffi"
readme = "README.md"
keywords = ["polyline", "geo", "ffi"]
license = "MIT"
edition = "2018"

[dependencies]
geo-types = "0.7"
num-traits = "0.2.14"
polyline = "0.9.0"
libc = "0.2.93"

[build-dependencies]
cbindgen = "0.19.0"

[lib]
name = "polyline_ffi"
crate-type = ["cdylib"]
test = true
doctest = false
doc = true

[profile.release]
lto = true
codegen-units = 1
