[package]
name = "polyline-ffi"
version = "0.5.1"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
description = "FFI bindings for the polyline crate"
documentation = "https://docs.rs/polyline-ffi"
homepage = "https://crates.io/crates/polyline-ffi"
repository = "https://github.com/urschrei/polyline-ffi"
readme = "README.md"
keywords = ["polyline", "geo", "ffi"]
license = "MIT"
edition = "2018"

[dependencies]
geo-types = "0.7"
num-traits = "0.2.14"
polyline = "0.9.0"
libc = "0.2.93"

[build-dependencies]
cbindgen = "0.20.0"

[features]
headers = []

[lib]
name = "polyline_ffi"
crate-type = ["cdylib"]
test = true
doctest = false
doc = true

[profile.release]
lto = true
codegen-units = 1
