[package]
name = "polyline-ffi"
version = "0.6.3"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
description = "FFI bindings for the polyline crate"
documentation = "https://docs.rs/polyline-ffi"
homepage = "https://crates.io/crates/polyline-ffi"
repository = "https://github.com/urschrei/polyline-ffi"
readme = "README.md"
keywords = ["polyline", "geo", "ffi"]
license = "MIT"
edition = "2021"

[dependencies]
geo-types = "0.7"
num-traits = "0.2.15"
polyline = "0.10.0"
libc = "0.2.140"

[build-dependencies]
cbindgen = "0.26.0"

[features]
headers = []

[lib]
name = "polylineffi"
crate-type = ["cdylib"]
test = true
doctest = false
doc = true

[profile.release]
lto = true
codegen-units = 1
